# jumpgates

./: README.md  brownie-config.yaml  deployed-goerli-terra1t6kzvnhd4l3nlzw0tnpdmx5xrjw0zp6d75ms8f.json  pyproject.toml  requirements.txt  sample.env
abis/: wormhole_token_bridge.json
contracts/: AssetRecoverer.sol  AssetRecovery.sol  ERC20TokenBridger.sol  Jumpgate.sol  NormalizedAmounts.sol  Recoverable.sol  Relay.sol  RelayFactory.sol  SafeAmounts.sol  Token.sol  TokenBridger.sol
contracts/test_helpers/: Destrudo.sol  JumpgateFactory.sol  MockERC1155.sol  MockERC20.sol  MockERC20Token.sol  MockERC20WithNonStandardDecimals.sol  MockERC721.sol  MockNFT.sol  MockWormholeTokenBridge.sol  Selfdestructable.sol
deployed/: mainnet-H6Q8UwkZ7G6qmBv4Nke7BtzbHrfZNvFhdQPCmUUHtTy2.json  ropsten-terra1t6kzvnhd4l3nlzw0tnpdmx5xrjw0zp6d75ms8f.json
interfaces/: AddRewardProgramEvmScriptFactory.json  EasyTrack.json  IBridge.sol  IWormholeTokenBridge.sol  Jumpgate.json  RewardProgramsRegistry.json  TopUpRewardProgramEvmScriptFactory.json
scripts/: bridge_tokens.py  check.py  check_jumpgate.py  deploy.py  deploy_jumpgate_ropsten.py  deploy_mock_bridge.py  deploy_mock_erc20_token.py  deploy_relay.py  token.py
tests/: conftest.py  test_bridge.py  test_jumpgate.py  test_jumpgate_integrated.py  test_jumpgate_unit.py  test_mock_bridge.py  test_relay.py  test_token.py  test_token_bridger.py  test_utils.py
utils/: account.py  amount.py  check.py  config.py  constants.py  contract.py  encode.py  log.py  network.py  secrets.py  simulate.py
